pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__declension_2_irreg_xx.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary>
      <div class="pls-inflection-summary-word-info">^kamma 1$ "kamma nt" irreg</div>
      <div class="pls-inflection-summary-definition">
        <span class="pls-inflection-summary-definition-pos">(nt)</span> <span class="pls-inflection-summary-definition-meaning">action, deed, doing</span>
      </div>
    </summary>
  </header>
<table class="pls-inflection-table pls-inflection-type-declension">
  <thead>
    <tr>
      <td><span class="pls-inflection-table-title">kamma nt</span></td>
      <td colspan="2"><span class="pls-inflection-col-header">^nt$</span></td>
      </tr>
    <tr>
      <td><span class="pls-inflection-row-header"></span></td>
      <td><span class="pls-inflection-col-header">^sg$</span></td>
      <td><span class="pls-inflection-col-header">^pl$</span></td>
      </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^nom$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammaṃ$</div>
        <div class="pls-inflection-inflected-word">^kamma$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammāni$</div>
        <div class="pls-inflection-inflected-word">^kammā$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^acc$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammaṃ$</div>
        <div class="pls-inflection-inflected-word">^kamma$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammāni$</div>
        <div class="pls-inflection-inflected-word">^kamme$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^instr$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammanā$</div>
        <div class="pls-inflection-inflected-word">^kammunā$</div>
        <div class="pls-inflection-inflected-word">^kammena$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammehi$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^dat$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammassa$</div>
        <div class="pls-inflection-inflected-word">^kammuno$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammānaṃ$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^abl$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammamhā$</div>
        <div class="pls-inflection-inflected-word">^kammasmā$</div>
        <div class="pls-inflection-inflected-word">^kammunā$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammehi$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^gen$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammassa$</div>
        <div class="pls-inflection-inflected-word">^kammuno$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammānaṃ$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^loc$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammani$</div>
        <div class="pls-inflection-inflected-word">^kammamhi$</div>
        <div class="pls-inflection-inflected-word">^kammasmiṃ$</div>
        <div class="pls-inflection-inflected-word">^kamme$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammesu$</div>
        </td>
      </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^voc$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^kamma$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^kammāni$</div>
        <div class="pls-inflection-inflected-word">^kammā$</div>
        </td>
      </tr>
    <tr>
      <td><span class="pls-inflection-row-header">^in comps$</span></td>
      <td colspan="6">
        <div class="pls-inflection-inflected-word">^kamma$</div>
        </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer">
    <a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeoxZiqvIWadaLeuXF4f44NCqEn49-B8KNbSvNer5jxgRYdtQ/viewform?entry.267696921=test case&entry.1433863141=v0.1">
      spot a mistake in the inflection table? something missing? fix it here!
    </a>
  </footer>
</div>

