pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__declension_3_ind.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary class="pls-inflection-summary">^kāmaṃ 3$ (indeclinable)</summary>
    </header>
<table class="pls-inflection-table pls-inflection-type-indeclinable">
  <tbody>
    <tr>
      <td><span class="pls-inflection-row-header">indeclinable</span></td>
      <td>
        <div class="pls-inflection-inflected-word">^kāmaṃ$</div>
      </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer">
    <a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeoxZiqvIWadaLeuXF4f44NCqEn49-B8KNbSvNer5jxgRYdtQ/viewform?entry.267696921=test case&entry.1433863141=v0.1">
      spot a mistake? something missing? fix it here!
    </a>
  </footer>
</div>

