pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__declension_3_ind_xx.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary>
      <div class="pls-inflection-summary-word-info">^kāmaṃ 3$ indeclinable</div>
      <div class="pls-inflection-summary-definition">
        <span class="pls-inflection-summary-definition-pos">(ind)</span> <span class="pls-inflection-summary-definition-meaning">indeed, surely</span>
      </div>
    </summary>
  </header>
<div class="pls-inflection-table pls-inflection-type-indeclinable">
  <i>NOTE: <strong>^kāmaṃ$</strong>&quot; does not have inflection table as it is an indeclinable.</i>
</div>

  
</div>

