pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__declension_3_ind_xx_short.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  
<div class="pls-inflection-type-indeclinable">
  <i>'<strong>^kāmaṃ 3$</strong>' is indeclinable.</i>
  </div>

  
</div>

