pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__declension_4_pron_1st_xx.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary>
      <div class="pls-inflection-summary-word-info">^maṃ$ &ndash; "ahaṃ pron 1st" (irregular)</div>
      <div class="pls-inflection-summary-definition">
        <span class="pls-inflection-summary-definition-pos">(pron)</span> <span class="pls-inflection-summary-definition-meaning">me (object)</span>
      </div>
    </summary>
  </header>
<table class="pls-inflection-table pls-inflection-type-declension">
  <thead>
    <tr>
      <td><span class="pls-inflection-table-title">ahaṃ pron 1st</span></td>
      <td><span class="pls-inflection-col-header">1st ^sg$</span></td>
      <td><span class="pls-inflection-col-header">1st ^pl$</span></td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^nom$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^ahaṃ$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhe$</div>
        <div class="pls-inflection-inflected-word">^mayaṃ$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^acc$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mamaṃ$</div>
        <div class="pls-inflection-inflected-word">^maṃ$</div>
        <div class="pls-inflection-inflected-word">^me$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhākaṃ$</div>
        <div class="pls-inflection-inflected-word">^amhe$</div>
        <div class="pls-inflection-inflected-word">^no$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^instr$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mayā$</div>
        <div class="pls-inflection-inflected-word">^me$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhehi$</div>
        <div class="pls-inflection-inflected-word">^no$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^dat$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mamaṃ$</div>
        <div class="pls-inflection-inflected-word">^mama$</div>
        <div class="pls-inflection-inflected-word">^mayhaṃ$</div>
        <div class="pls-inflection-inflected-word">^mayha$</div>
        <div class="pls-inflection-inflected-word">^me$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhaṃ$</div>
        <div class="pls-inflection-inflected-word">^amhākaṃ$</div>
        <div class="pls-inflection-inflected-word">^no$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^abl$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mayā$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhehi$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^gen$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mamaṃ$</div>
        <div class="pls-inflection-inflected-word">^mama$</div>
        <div class="pls-inflection-inflected-word">^mayhaṃ$</div>
        <div class="pls-inflection-inflected-word">^mayha$</div>
        <div class="pls-inflection-inflected-word">^me$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhaṃ$</div>
        <div class="pls-inflection-inflected-word">^amhākaṃ$</div>
        <div class="pls-inflection-inflected-word">^no$</div>
        </td>
    </tr>
    <tr>
      <td>
        <span class="pls-inflection-row-header">^loc$</span>
      </td>
      <td>
        <div class="pls-inflection-inflected-word">^mayi$</div>
        </td>
      <td>
        <div class="pls-inflection-inflected-word">^amhesu$</div>
        </td>
    </tr>
    <tr>
      <td><span class="pls-inflection-row-header">^in comps$</span></td>
      <td colspan="2">
        </td>
    </tr>
  </tbody>
</table>

  <footer class="pls-inflection-footer">
    <a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeoxZiqvIWadaLeuXF4f44NCqEn49-B8KNbSvNer5jxgRYdtQ/viewform?entry.267696921=test case&entry.1433863141=v0.1">
      spot a mistake in the inflection table? something missing? fix it here!
    </a>
  </footer>
</div>

